		and output to data/code.attributes.csv, for use by scripts/code.attributes2html.pl.
	- Incorporate code from scripts/code.attributes2html.pl into GraphViz2::Marpa::Utils.
	- Incorporate code from scripts/stt2html.pl into GraphViz2::Marpa::Utils.
	- Rename html/default.stt.html to html/stt.html.
	- Expand contents of html/code.attributes.html, html/index.html and html/stt.html.

1.05  Tue Oct 16 09:49:00 2012
	- Fix a bug in the lexer where it used to combine multiple lines in the input file by, basically, using
		join('', <IN>), which meant the last char of a line was juxtaposed with the first char of the next
		line. If the second line started with spaces, that was ok, but if it started with, say, the name of
		a node, then that name was concatenated with what could have been a node name on the end of a previous
		line. This meant 2 separate node names sometimes became one.
	- Add data/52.gv to test the solution.
	- Shift data/code.attributes.html to html/.
	- Shift data/default.stt.html to html/.
	- Add scripts/generate.demo.sh.

1.04  Tue Sep 25 13:55:00 2012
	- All data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
	- Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
		are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
		normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
		This makes it easier for code processing these output streams to distinguish between special cases
		and common-or-garden nodes. It should have always been done this way, and specifically simplifies code
		in GraphViz2::Marpa::TreeUtils.
	- Change Marpa.pm to support the new distro GraphViz2::Marpa::TreeUtils, which is a sub-class of GraphViz2::Marpa.
		Specifically, the lexer and the parser are stored in mutators called lexer() and parser(),
		so they can be called from sub-classes.