@@ -27,9 +27,14 @@ configure_requires =>
 requires =>
 {
 	Algorithm::Diff             => 1.1902,
+	Config                      => undef,
+	Config::Tiny                => 2.14,
 	Data::Section::Simple       => 0.02,
 	Date::Format                => 2.24,
+	Date::Simple                => 3.03,
 	feature                     => 1.00,
+	File::Copy                  => 2.21,
+	File::HomeDir               => 0.99,
 	File::Slurp                 => 9999.19,
 	File::Spec                  => 3.33,
 	File::Temp                  => 0.22,
@@ -42,15 +47,18 @@ requires =>
 	List::Compare               => 0.37,
 	Log::Handler                => 0.71,
 	Marpa::R2                   => 2.022000,
+	Module::Path                => 0.08,
+	Path::Class                 => 0.24,
 	perl                        => '5.10.0', # For given/when.
 	Perl6::Slurp                => 0.03,
 	Pod::Usage                  => 1.36,
 	Set::Array                  => 0.23,
 	Set::FA::Element            => 1.08,
 	strict                      => 1.03,
-	Tree                        => 1.02,
+	Text::CSV                   => 1.21,
 	Text::CSV_XS                => 0.80,
 	Text::Xslate                => 1.4001,
+	Tree::DAG_Node              => 1.06,
 	Try::Tiny                   => 0.09,
 	warnings                    => 1.03,
 },
