@@ -34,6 +34,9 @@ and output to data/code.attributes.csv, for use by scripts/code.attributes2html.
 - Incorporate code from scripts/stt2html.pl into GraphViz2::Marpa::Utils.
 - Rename html/default.stt.html to html/stt.html.
 - Expand contents of html/code.attributes.html, html/index.html and html/stt.html.
+- Add config/.htgraphviz2.marpa.conf and lib/GraphViz2/Marpa/Config.pm to simplify generating the demo's
+index.html.
+- Switch from Tree to Tree::DAG_Node, since it has various method I hope to use implementing paths().
 EOT
 
 [V 1.05]
